# scrapes-lib

./: .gitignore  README.md  pyproject.toml  tinybird.py  vlr-gg-results-page.html
scrapes_lib/: __init__.py  configs.py  schemas.py  utils.py
web_scrapers/valorant/: __init__.py  scraper.py
web_scrapers/valorant/configs/: vlr-gg-matches.yaml  vlr-gg-results.yaml
