[tool.poetry]
name = "scrapes-lib"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "scrapes_lib"}]

[tool.poetry.dependencies]
python = "^3.10"
parsel = "^1.7.0"
requests = "^2.28.1"
uplink = "^0.9.7"


[tool.poetry.group.dev.dependencies]
ipython = "^8.6.0"
black = "^22.10.0"
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
